Revision history for AE-AdHoc

0.04    Sun Sep 09 2012
        * API: Add arglist support to callbacks: ae_recv { ae_send->(1..5) };
        * API: Add extra arguments to callback: ae_recv { ae_send(1..5) };

0.03    Thu Sep 06 2012
        * API: Make empty/zero $timeout illegal.

0.0203  Tue Aug 14 2012
        * Fixed empty $timeout undef warning.
        * Minor code cleanup.

0.02    Sat Aug 11 2012
        First version, released on an unsuspecting world.
        - ae_recv, ae_send and ae_croak wotk and pass most basic tests
