@@ -3,6 +3,7 @@ Revision history for AE-AdHoc
 0.04    Sun Sep 09 2012
         * API: Add arglist support to callbacks: ae_recv { ae_send->(1..5) };
         * API: Add extra arguments to callback: ae_recv { ae_send(1..5) };
+        * Example added (port-probe.pl)
 
 0.03    Thu Sep 06 2012
         * API: Make empty/zero $timeout illegal.
